--- a/package.json
+++ b/package.json
@@ -1,11 +1,25 @@
 {
+  "name": "rootedlane-api",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "mocha test/api.test.js --reporter mochawesome --reporter-options reportDir=test-results,reportFilename=test-report,inline=true",
+    "test:simple": "mocha test/api.test.js --reporter spec"
+  },
   "dependencies": {
-    "base-64": "^1.0.0",
-    "bcryptjs": "^3.0.2",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
-    "express": "^5.1.0",
-    "mongodb": "^6.19.0",
-    "nodemon": "^3.1.10"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^5.0.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.7",
+    "chai-http": "^4.3.0",
+    "mocha": "^10.8.2",
+    "mochawesome": "^7.1.4",
+    "nodemon": "^2.0.22"
   }
 }
